--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -5,7 +5,7 @@
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicola Rossi Full-Stack Developer</title>
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="./assets/favicon.png">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
@@ -28,7 +28,7 @@
     </label>
     <ul class="menu">
      <li> <a href=index.html>I'm Nicola</a></li>
-     <li> <a href=cv.html>My Developer CV</a></li> 
+     <li> <a href=CV.html>My Developer CV</a></li> 
      <li> <a href=Contact-Me.html> Contact Me</a></li>
     </ul>
    </header>
