--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -5,7 +5,7 @@
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicola Rossi Full-Stack Developer</title>
-    <link rel="icon" type="image/png" href="./img/CV-img/CV_Logo_Black-Black.png">
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <link rel="stylesheet" href="./CSS/Projects-Style.css">
 </head>
 <body>  
