--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Nicola Rossi Full-Stack Developer">
+    <meta property="og:description" content="Nicola's dev portfolio: CV, contact form & socials. Full Stack Developer, freelance UI/UX with client experience.">
+    <meta property="og:type" content="website portfolio">
+    <meta property="og:url" content="https://nicolaro.github.io/">
+    <meta property="og:image" content="https://www.example.com/img/Foto-Portfolio02_2024.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
