Update Green-Earth_Project.html with OpenGraph & meta Robot

--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="Nicola Rossi Full-Stack Developer">
+    <meta property="og:description" content="Nicola's dev portfolio: CV, contact form & socials. Full Stack Developer, freelance UI/UX with client experience.">
+    <meta property="og:type" content="website portfolio">
+    <meta property="og:url" content="https://nicolaro.github.io/">
+    <meta property="og:image" content="https://github.com/NicolaRo/NicolaRo.github.io/blob/main/img/Foto-Portfolio02_2024.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <link rel="stylesheet" href="./CSS/Projects-Style.css">
