--- a/Depyl_Project.html
+++ b/Depyl_Project.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="Nicola Rossi Full-Stack Developer">
+    <meta property="og:description" content="Nicola's dev portfolio: CV, contact form & socials. Full Stack Developer, freelance UI/UX with client experience.">
+    <meta property="og:type" content="website portfolio">
+    <meta property="og:url" content="https://nicolaro.github.io/">
+    <meta property="og:image" content="https://github.com/NicolaRo/NicolaRo.github.io/blob/main/img/Foto-Portfolio02_2024.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-      </style>
     <link rel="stylesheet" href="./CSS/Projects-Style.css">
 </head>
 <body>  
