Updated Contact-Me.html opengraph tags

--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Contact Rossi Nicola">
+    <meta property="og:description" content="Contact form & social media links.">
+    <meta property="og:type" content="form">
+    <meta property="og:url" content="https://nicolaro.github.io/Contact-Me.html">
+    <meta property="og:image" content="https://nicolaro.github.io/img/Contact-Me-img/Get-in-touch.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/Contact-Me-Style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script type="text/javascript">
   (function(){
