--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/Projects-Style.css">
 </head>
 <body>  
   <header class="header">
