Updated CV.html opengraph tag

--- a/CV.html
+++ b/CV.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Rossi Nicola Developer Curriculum Vitae">
+    <meta property="og:description" content="Knowledges, hard & soft skills and projects links">
+    <meta property="og:type" content="profile">
+    <meta property="og:url" content="https://nicolaro.github.io/CV.html">
+    <meta property="og:image" content="https://nicolaro.github.io/img/CV-img/Logo_Start2Impact.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/CV-Style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
   <header class="header">
