Updated index.html opengraph img link

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Nicola Rossi Full-Stack Developer">
     <meta property="og:description" content="Nicola's dev portfolio: CV, contact form & socials. Full Stack Developer, freelance UI/UX with client experience.">
-    <meta property="og:type" content="website portfolio">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="https://nicolaro.github.io/">
-    <meta property="og:image" content="https://github.com/NicolaRo/NicolaRo.github.io/blob/main/img/Foto-Portfolio02_2024.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Foto.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
