Update Green-Earth_Project.html raw picture link on meta tag robot

--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Project showcase.">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://nicolaro.github.io/Green-Earth_Project.html">
-    <meta property="og:image" content="https://nicolaro.github.io/img/Projects-img/Green-Project_Logo_Orig.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Projects-img/Green-Project_Logo_Orig.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
