--- a/Depyl_Project.html
+++ b/Depyl_Project.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Project showcase">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://nicolaro.github.io/Depyl_Project.html">
-    <meta property="og:image" content="https://nicolaro.github.io/img/Projects-img/Depyl_Logo_Clear.png">
+    <meta property="og:image" content="https://github.com/NicolaRo/NicolaRo.github.io/raw/main/img/Projects-img/Depyl_Logo_Clear.png">
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
