--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -50,31 +50,53 @@
              <form id="contact-form">
                  <div class="field">
                    <label for="name">name</label>
-                   <input type="text" name="name" id="name">
+                   ﻿<input type="text" name="name" id="name" required minlength="2" placeholder="Your name">
                  </div>
                  <div class="field">
                    <label for="email">email</label>
-                   <input type="text" name="email" id="email">
+                   <input type="email" name="email" id="email" required placeholder="you@example.com">
                  </div>
                  <div class="field">
                    <label for="message">message</label>
                    <textarea name="message" id="message"></textarea>
                  </div>
-                 <input type="submit" id="button" value="Send Email" >
+                 <textarea name="message" id="message" required minlength="10" placeholder="Write your message..."></textarea>
                  </div>
                </form>
                <script>
                  document.getElementById('contact-form').addEventListener('submit', function(event) {
-                   event.preventDefault();
-               
-                   emailjs.sendForm('service_a2dm5gk', 'template_0zzzi64', this)
-                     .then(function() {
-                       alert('Messaggio inviato con successo!');
-                     }, function(error) {
-                       alert('Errore nell\'invio. Riprova.');
-                       console.log(error);
-                     });
-                 });
+  event.preventDefault();
+
+  const name = document.getElementById('name');
+  const email = document.getElementById('email');
+  const message = document.getElementById('message');
+
+ 
+  if (name.value.trim().length < 2) {
+    alert("Il nome deve contenere almeno 2 caratteri.");
+    name.focus();
+    return;
+  }
+  const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+  if (!emailPattern.test(email.value)) {
+    alert("Inserisci un'email valida.");
+    email.focus();
+    return;
+  }
+  if (message.value.trim().length < 10) {
+    alert("Il messaggio deve contenere almeno 10 caratteri.");
+    message.focus();
+    return;
+  }
+  emailjs.sendForm('service_a2dm5gk', 'template_0zzzi64', this)
+    .then(function() {
+      alert('Messaggio inviato con successo!');
+      document.getElementById('contact-form').reset();
+    }, function(error) {
+      alert('Errore nell\'invio. Riprova.');
+      console.log(error);
+    });
+});
                </script>
            </div> 
          </div>
