--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/CV-Style.css">
 </head>
 <body>
   <header class="header">
@@ -204,9 +204,9 @@
   </main>
     <footer class="footer">
       <div class="footer-links">
-        <a class="footer-btn" a href="./index.html">Home</a>
-        <a class="footer-btn" a href="./CV.html">CV</a>
-        <a class="footer-btn" a href="./Contact-Me.html">Contact Me</a>
+        <a class="footer-btn"  href="./index.html">Home</a>
+        <a class="footer-btn"  href="./CV.html">CV</a>
+        <a class="footer-btn"  href="./Contact-Me.html">Contact Me</a>
       </div>
       <div class="footer-social-icons">
       <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
