--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/Contact-Me-Style.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script type="text/javascript">
   (function(){
@@ -50,7 +50,7 @@
              <form id="contact-form">
                  <div class="field">
                    <label for="name">name</label>
-                   ﻿<input type="text" name="name" id="name" required minlength="2" placeholder="Your name">
+                   <input type="text" name="name" id="name" required minlength="2" placeholder="Your name">
                  </div>
                  <div class="field">
                    <label for="email">email</label>
@@ -58,46 +58,9 @@
                  </div>
                  <div class="field">
                    <label for="message">message</label>
-                   <textarea name="message" id="message"></textarea>
+                   <textarea name="message" id="message" required minlength="10" placeholder="Write your message..."></textarea>
                  </div>
-                 <textarea name="message" id="message" required minlength="10" placeholder="Write your message..."></textarea>
-                 </div>
-               </form>
-               <script>
-                 document.getElementById('contact-form').addEventListener('submit', function(event) {
-  event.preventDefault();
-
-  const name = document.getElementById('name');
-  const email = document.getElementById('email');
-  const message = document.getElementById('message');
-
- 
-  if (name.value.trim().length < 2) {
-    alert("Il nome deve contenere almeno 2 caratteri.");
-    name.focus();
-    return;
-  }
-  const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-  if (!emailPattern.test(email.value)) {
-    alert("Inserisci un'email valida.");
-    email.focus();
-    return;
-  }
-  if (message.value.trim().length < 10) {
-    alert("Il messaggio deve contenere almeno 10 caratteri.");
-    message.focus();
-    return;
-  }
-  emailjs.sendForm('service_a2dm5gk', 'template_0zzzi64', this)
-    .then(function() {
-      alert('Messaggio inviato con successo!');
-      document.getElementById('contact-form').reset();
-    }, function(error) {
-      alert('Errore nell\'invio. Riprova.');
-      console.log(error);
-    });
-});
-               </script>
+                </form>
            </div> 
          </div>
      </div>
@@ -109,9 +72,9 @@
     </main>
     <footer class="footer">
       <div class="footer-links">
-        <a class="footer-btn" a href="./index.html">Home</a>
-        <a class="footer-btn" a href="./CV.html">CV</a>
-        <a class="footer-btn" a href="./Contact-Me.html">Contact Me</a>
+        <a class="footer-btn"  href="./index.html">Home</a>
+        <a class="footer-btn"  href="./CV.html">CV</a>
+        <a class="footer-btn"  href="./Contact-Me.html">Contact Me</a>
       </div>
       <div class="footer-social-icons">
       <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
@@ -121,5 +84,40 @@
       </div>
         <p>Ethically designed and developed by Rossi Nicola®</p>
     </footer>
+    <script>
+      document.getElementById('contact-form').addEventListener('submit', function(event) {
+event.preventDefault();
+
+const name = document.getElementById('name');
+const email = document.getElementById('email');
+const message = document.getElementById('message');
+
+
+if (name.value.trim().length < 2) {
+alert("Il nome deve contenere almeno 2 caratteri.");
+name.focus();
+return;
+}
+const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+if (!emailPattern.test(email.value)) {
+alert("Inserisci un'email valida.");
+email.focus();
+return;
+}
+if (message.value.trim().length < 10) {
+alert("Il messaggio deve contenere almeno 10 caratteri.");
+message.focus();
+return;
+}
+emailjs.sendForm('service_a2dm5gk', 'template_0zzzi64', this)
+.then(function() {
+alert('Messaggio inviato con successo!');
+document.getElementById('contact-form').reset();
+}, function(error) {
+alert('Errore nell\'invio. Riprova.');
+console.log(error);
+});
+});
+    </script>
 </body>
 </html>
