--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -65,9 +65,9 @@
   </main>
   <footer class="footer">
     <div class="footer-links">
-      <a class="footer-btn" a href="./index.html">Home</a>
-      <a class="footer-btn" a href="./CV.html">CV</a>
-      <a class="footer-btn" a href="./Contact-Me.html">Contact Me</a>
+      <a class="footer-btn" href="./index.html">Home</a>
+      <a class="footer-btn" href="./CV.html">CV</a>
+      <a class="footer-btn" href="./Contact-Me.html">Contact Me</a>
     </div>
     <div class="footer-social-icons">
     <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
