--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv= "X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Green Earth Project">
-    <meta property="og:description" content="Project showcase.">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://nicolaro.github.io/Green-Earth_Project.html">
-    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Projects-img/Green-Project_Logo_Orig.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Green Earth Project" />
+    <meta property="og:description" content="Project showcase." />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://nicolaro.github.io/Green-Earth_Project.html" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Projects-img/Green-Project_Logo_Orig.png" />
     <title>Nicola Rossi Full-Stack Developer</title>
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-      </style>
-    <link rel="stylesheet" href="./CSS/Projects-Style.css">
-</head>
-<body>  
-  <header class="header">
-    <img src="./img/Logo_Black-White.png" alt="Logo" class="logo-img" style="width: 50px; height: auto; margin-top: 10px;">
-    <a href="index.html" class="logo">
-    </a>
-    <input class="menu-btn" id="menu-btn" type="checkbox">
-    <label for="menu-btn" class="menu-icon">
-     <span class="nav-icon"></span>
-    </label>
-    <ul class="menu">
-     <li> <a href=index.html>I'm Nicola</a></li>
-     <li> <a href=cv.html>My Developer CV</a></li> 
-     <li> <a href=Contact-Me.html> Contact Me</a></li>
-    </ul>
-   </header>
-  <main>
+      @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
+    <link rel="stylesheet" href="./CSS/Projects-Style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <img
+        src="./img/Logo_Black-White.png"
+        alt="Logo"
+        class="logo-img"
+        style="width: 50px; height: auto; margin-top: 10px"
+      />
+      <a href="index.html" class="logo"></a>
+      <input class="menu-btn" id="menu-btn" type="checkbox" />
+      <label for="menu-btn" class="menu-icon">
+        <span class="nav-icon"></span>
+      </label>
+      <ul class="menu">
+        <li><a href="index.html">I'm Nicola</a></li>
+        <li><a href="cv.html">My Developer CV</a></li>
+        <li><a href="Contact-Me.html"> Contact Me</a></li>
+      </ul>
+    </header>
+    <main>
       <div class="Green-Earth-preview">
         <div class="CV-hero-master">
           <div class="project-layout">
             <div class="Project-description">
               <h1>🌿 GREEN EARTH 🌿</h1>
-              <img src="./img/Projects-img/Green-Project_Logo_Orig.png" alt="Logo_Green Earth" class="hero-img" style="width: 50%; height: auto; margin: 5%;">
+              <img src="./img/Projects-img/Green-Project_Logo_Orig.png" alt="Logo_Green Earth" class="hero-img" style="width: 50%; height: auto; margin: 5%"/>
               <h3>📋 Project Brief</h3>
               <p>The website had to reflect the values and identity of the GreenEarth brand and was structured around the following key sections:</p>
               <p>Here are the key elements your page should include to stand out:</p>
@@ -52,27 +56,29 @@
               <a class="previous-project-btn" href="./Depyl_Project.html">Previous project</a>
               <a class="go-back-btn" href="./index.html">Back to Home</a>
             </div>
-        </div>
+          </div>
           <div class="iphone-wrapper">
-            <img src="./img/Projects-img/iphone-13-mini.png" alt="iphone 13 mini" class="iphone-img" style="width: auto; height: 800px; margin: 5%;">
-            <img src="./img/Projects-img/GREEN-HEART-landingpage-scrolling-preview.gif" alt="Preview" class="gif-green-earth-overlay">
+            <img src="./img/Projects-img/iphone-13-mini.png" alt="iphone 13 mini" class="iphone-img" style="width: auto; height: 800px; margin: 5%"/>
+            <img src="./img/Projects-img/GREEN-HEART-landingpage-scrolling-preview.gif" alt="Preview" class="gif-green-earth-overlay"/>
           </div>
         </div>
-    </div>
-  </main>
-  <footer class="footer">
-    <div class="footer-links">
-      <a class="footer-btn" href="./index.html">Home</a>
-      <a class="footer-btn" href="./CV.html">CV</a>
-      <a class="footer-btn" href="./Contact-Me.html">Contact Me</a>
-    </div>
-    <div class="footer-social-icons">
-    <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
-      <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"></a>
-    <a href="https://github.com/NicolaRo" target="_blank">
-      <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"></a>
-    </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-links">
+        <a class="footer-btn" href="./index.html">Home</a>
+        <a class="footer-btn" href="./CV.html">CV</a>
+        <a class="footer-btn" href="./Contact-Me.html">Contact Me</a>
+      </div>
+      <div class="footer-social-icons">
+        <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
+          <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"/>
+        </a>
+        <a href="https://github.com/NicolaRo" target="_blank">
+          <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"/>
+        </a>
+      </div>
       <p>Ethically designed and developed by Rossi Nicola®</p>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
