Green-Earth formatted and validated

--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Green Earth Project" />
-    <meta property="og:description" content="Project showcase." />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://nicolaro.github.io/Green-Earth_Project.html" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Projects-img/Green-Project_Logo_Orig.png" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Green Earth Project">
+    <meta property="og:description" content="Project showcase.">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://nicolaro.github.io/Green-Earth_Project.html">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Projects-img/Green-Project_Logo_Orig.png">
     <title>Nicola Rossi Full-Stack Developer</title>
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
-    <link rel="stylesheet" href="./CSS/Projects-Style.css" />
+    <link rel="stylesheet" href="./CSS/Projects-Style.css">
   </head>
   <body>
     <header class="header">
@@ -23,10 +23,9 @@
         src="./img/Logo_Black-White.png"
         alt="Logo"
         class="logo-img"
-        style="width: 50px; height: auto; margin-top: 10px"
-      />
+        style="width: 50px; height: auto; margin-top: 10px">
       <a href="index.html" class="logo"></a>
-      <input class="menu-btn" id="menu-btn" type="checkbox" />
+      <input class="menu-btn" id="menu-btn" type="checkbox">
       <label for="menu-btn" class="menu-icon">
         <span class="nav-icon"></span>
       </label>
@@ -42,7 +41,7 @@
           <div class="project-layout">
             <div class="Project-description">
               <h1>🌿 GREEN EARTH 🌿</h1>
-              <img src="./img/Projects-img/Green-Project_Logo_Orig.png" alt="Logo_Green Earth" class="hero-img" style="width: 50%; height: auto; margin: 5%"/>
+              <img src="./img/Projects-img/Green-Project_Logo_Orig.png" alt="Logo_Green Earth" class="hero-img" style="width: 50%; height: auto; margin: 5%">
               <h3>📋 Project Brief</h3>
               <p>The website had to reflect the values and identity of the GreenEarth brand and was structured around the following key sections:</p>
               <p>Here are the key elements your page should include to stand out:</p>
@@ -57,11 +56,10 @@
               <a class="go-back-btn" href="./index.html">Back to Home</a>
             </div>
           </div>
-          <div class="iphone-wrapper">
-            <img src="./img/Projects-img/iphone-13-mini.png" alt="iphone 13 mini" class="iphone-img" style="width: auto; height: 800px; margin: 5%"/>
-            <img src="./img/Projects-img/GREEN-HEART-landingpage-scrolling-preview.gif" alt="Preview" class="gif-green-earth-overlay"/>
-          </div>
         </div>
+            <div class="iphone-wrapper">
+<img src="./img/Projects-img/iphone-13-mini.png" alt="iphone 13 mini" class="iphone-img" style="width: auto; height: 800px; margin: 5%;">
+<img src="./img/Projects-img/GREEN-HEART-landingpage-scrolling-preview.gif" alt="Preview" class="gif-green-earth-overlay"> </div>
       </div>
     </main>
     <footer class="footer">
@@ -72,10 +70,10 @@
       </div>
       <div class="footer-social-icons">
         <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
-          <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"/>
+          <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon">
         </a>
         <a href="https://github.com/NicolaRo" target="_blank">
-          <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"/>
+          <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon">
         </a>
       </div>
       <p>Ethically designed and developed by Rossi Nicola®</p>
