--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -16,14 +16,14 @@
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
     <link rel="stylesheet" href="./CSS/Contact-Me-Style.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>
   (function(){
     emailjs.init("4fcy6Mn0D3I2UsLwi");
   })();
 </script>
 </head>
-<body>  
+<body>
   <header class="header">
     <img src="./img/Logo_Black-White.png" alt="Logo" class="logo-img" style="width: 50px; height: auto; margin-top: 10px;">
     <a href="index.html" class="logo">
@@ -37,53 +37,51 @@
      <li> <a href=CV.html>My Developer CV</a></li> 
      <li> <a href=Contact-Me.html> Contact Me</a></li>
     </ul>
-   </header>
+  </header>
   <br>
   <br>
-<header class="hero-container">
-  <main><h1>Contact Me</h1>
+  <main>
+    <h1>Contact Me</h1>
     <div class="wrap-form-container">
      <img src="./img/Contact-Me-img/Get-in-touch.png" alt="Contact Me" class="hero-img">
-     <div class="container-form">    
-         <div class="form-text">
-             <p>Fill out the form below to send me a message. I will get back to you as soon as possible.</p>
-             <form id="contact-form">
-                 <div class="field">
-                   <label for="name">name</label>
-                   <input type="text" name="name" id="name" required minlength="2" placeholder="Your name">
-                 </div>
-                 <div class="field">
-                   <label for="email">email</label>
-                   <input type="email" name="email" id="email" required placeholder="you@example.com">
-                 </div>
-                 <div class="field">
-                   <label for="message">message</label>
-                   <textarea name="message" id="message" required minlength="10" placeholder="Write your message..."></textarea>
-                 </div>
-                </form>
-           </div> 
-         </div>
-     </div>
-    </div>
+      <div class="container-form">
+        <div class="form-text">
+          <p>Fill out the form below to send me a message. I will get back to you as soon as possible.</p>
+          <form id="contact-form">
+            <div class="field">
+              <label for="name">name</label>
+              <input type="text" name="name" id="name" required minlength="2" placeholder="Your name">
+            </div>
+            <div class="field">
+              <label for="email">email</label>
+              <input type="email" name="email" id="email" required placeholder="you@example.com">
+            </div>
+            <div class="field">
+              <label for="message">message</label>
+              <textarea name="message" id="message" required minlength="10" placeholder="Write your message..."></textarea>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>       
     <div class="whatsapp-button">
       <a href="https://wa.me/393459778518" target="_blank" class="logo-whatsapp">Start a chat with me <img src="./img/CV-img/whatsapp.png" alt="WhatsApp" style="height: 24px; text-decoration: none;"> </a>
     </div>
-    </header>
-    </main>
-    <footer class="footer">
-      <div class="footer-links">
-        <a class="footer-btn"  href="./index.html">Home</a>
-        <a class="footer-btn"  href="./CV.html">CV</a>
-        <a class="footer-btn"  href="./Contact-Me.html">Contact Me</a>
-      </div>
-      <div class="footer-social-icons">
-      <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
-        <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"></a>
-      <a href="https://github.com/NicolaRo" target="_blank">
-        <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"></a>
-      </div>
-        <p>Ethically designed and developed by Rossi Nicola®</p>
-    </footer>
+  </main>
+<footer class="footer">
+  <div class="footer-links">
+    <a class="footer-btn"  href="./index.html">Home</a>
+    <a class="footer-btn"  href="./CV.html">CV</a>
+    <a class="footer-btn"  href="./Contact-Me.html">Contact Me</a>
+  </div>
+  <div class="footer-social-icons">
+  <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
+    <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"></a>
+  <a href="https://github.com/NicolaRo" target="_blank">
+    <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"></a>
+  </div>
+    <p>Ethically designed and developed by Rossi Nicola®</p>
+</footer>
     <script>
       document.getElementById('contact-form').addEventListener('submit', function(event) {
 event.preventDefault();
