renamed and relinked GIF developer

--- a/CV.html
+++ b/CV.html
@@ -121,7 +121,7 @@
 <section class="my-projects">
   <div class="Section-title">
     <h1>My Projects</h1>
-    <img src="./img/CV-img/Coding Software Engineer GIF.gif" alt="Coding Software Engineer" class="projects-img;">
+    <img src="./img/CV-img/Coding-Software-Engineer_GIF.gif" alt="Coding Software Engineer" class="projects-img;">
   </div>
   <div class="card-container">
     <div class="card">
