CV.html code validated formatted

--- a/CV.html
+++ b/CV.html
@@ -59,7 +59,7 @@
     </div>
     
   <div class="Masters-description">
-    <p><am style="font-weight: bold;">Skills I've learned</am> </p>
+    <p><strong>Skills I've learned</strong></p>
     <br>
     <ul>
       <li>AI Prompting</li>
@@ -69,9 +69,7 @@
     </ul>
   </div>
 </div>
-    <button class="btn-master">
-      <a href="https://start2impact.pro.typeform.com/to/xuE0ijXb?typeform-source=www.start2impact.it#brochure=full-stack&source=sito-web" target="_blank">Go to Master's page</a> </button>
-    </button>
+<a class="btn-master" href="https://start2impact.pro.typeform.com/to/xuE0ijXb?typeform-source=www.start2impact.it#brochure=full-stack&source=sito-web" target="_blank">Go to Master's page</a>
 </section>
 <section class="Skills-container">
   <h1>Tools I use </h1>
@@ -127,7 +125,7 @@
     <div class="card">
       <h2>DEPYL</h2>
       <div class="image">
-        <img src="./img/CV-img/Depyl_Logo_Clear.png" alt="Depyl_Logo_Clear" />
+        <img src="./img/CV-img/Depyl_Logo_Clear.png" alt="Depyl_Logo_Clear">
       </div>
       <div class="tag-container">
         <h3>tags: </h3>
@@ -135,14 +133,12 @@
         <h5>HTML</h5>
         <h5>CSS</h5>
       </div>
-      <button class="projects-btn">
-        <a href="./Depyl_Project.html" target="_blank">See project</a>
-      </button>
+        <a class="projects-btn" href="./Depyl_Project.html" target="_blank">See project</a>
     </div>
     <div class="card">
       <h2>Green Earth</h2>
       <div class="image">
-        <img src="./img/CV-img/Green-Project_Logo_Orig.png" alt="Green-Project_Logo" />
+        <img src="./img/CV-img/Green-Project_Logo_Orig.png" alt="Green-Project_Logo">
       </div>
       <div class="tag-container">
         <h3>tags: </h3>
@@ -150,14 +146,12 @@
         <h5>HTML</h5>
         <h5>CSS</h5>
       </div>
-      <button class="projects-btn">
-        <a href="./Green-Earth_Project.html" target="_blank">See project</a>
-      </button>
+        <a class="projects-btn" href="./Green-Earth_Project.html" target="_blank">See project</a>
     </div>
     <div class="card">
       <h2>Coming Soon</h2>
       <div class="image">
-        <img src="./img/CV-img/Coming-soon-icon_black.png" alt="Depyl_Logo_Clear" />
+        <img src="./img/CV-img/Coming-soon-icon_black.png" alt="Depyl_Logo_Clear">
       </div>
       <div class="tag-container">
         <h3>tags: </h3>
@@ -165,14 +159,12 @@
         <h5>HTML</h5>
         <h5>CSS</h5>
       </div>
-      <button class="projects-btn">
-        <a href="./Projects.html" target="_blank">See project</a>
-      </button>
+        <a class="projects-btn" href="./Projects.html" target="_blank">See project</a>
     </div>
     <div class="card">
       <h2>Coming soon</h2>
       <div class="image">
-        <img src="./img/CV-img/Coming-soon-icon_white.png" alt="Green-Project_Logo" />
+        <img src="./img/CV-img/Coming-soon-icon_white.png" alt="Green-Project_Logo">
       </div>
       <div class="tag-container">
         <h3>tags: </h3>
@@ -180,14 +172,12 @@
         <h5>HTML</h5>
         <h5>CSS</h5>
       </div>
-      <button class="projects-btn">
-        <a href="./Projects.html" target="_blank">See project</a>
-      </button>
+      <a class="projects-btn" href="./Projects.html" target="_blank">See project</a>
     </div>
     <div class="card">
       <h2>Coming Soon</h2>
       <div class="image">
-        <img src="./img/CV-img/Coming-soon-icon_black.png" alt="Green-Project_Logo" />
+        <img src="./img/CV-img/Coming-soon-icon_black.png" alt="Green-Project_Logo">
       </div>
       <div class="tag-container">
         <h3>tags: </h3>
@@ -195,9 +185,7 @@
         <h5>HTML</h5>
         <h5>CSS</h5>
       </div>
-      <button class="projects-btn">
-        <a href="./Projects.html" target="_blank">See project</a>
-      </button>
+      <a class="projects-btn" href="./Projects.html" target="_blank">See project</a>
     </div>
   </div>
 </section>
