--- a/CV.html
+++ b/CV.html
@@ -57,7 +57,7 @@
         <img src="./img/CV-img/Start2Impact-Master-webpage.gif" alt="Preview" class="gif-overlay">
       </div>
     </div>
-    
+  </div>
   <div class="Masters-description">
     <p><strong>Skills I've learned</strong></p>
     <br>
