--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Contact Rossi Nicola">
     <meta property="og:description" content="Contact form & social media links.">
-    <meta property="og:type" content="form">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="https://nicolaro.github.io/Contact-Me.html">
     <meta property="og:image" content="https://nicolaro.github.io/img/Contact-Me-img/Get-in-touch.png">
     <title>Nicola Rossi Full-Stack Developer</title>
@@ -43,29 +43,36 @@
   <main>
     <h1>Contact Me</h1>
     <div class="wrap-form-container">
-     <img src="./img/Contact-Me-img/Get-in-touch.png" alt="Contact Me" class="hero-img">
+      <img src="./img/Contact-Me-img/Get-in-touch.png" alt="Contact Me" class="hero-img">
+      
       <div class="container-form">
         <div class="form-text">
           <p>Fill out the form below to send me a message. I will get back to you as soon as possible.</p>
+          
           <form id="contact-form">
             <div class="field">
-              <label for="name">name</label>
+              <label for="name">Name</label>
               <input type="text" name="name" id="name" required minlength="2" placeholder="Your name">
             </div>
             <div class="field">
-              <label for="email">email</label>
+              <label for="email">Email</label>
               <input type="email" name="email" id="email" required placeholder="you@example.com">
             </div>
             <div class="field">
-              <label for="message">message</label>
+              <label for="message">Message</label>
               <textarea name="message" id="message" required minlength="10" placeholder="Write your message..."></textarea>
             </div>
+            <div class="sumbit-btn">
+              <button type="submit">Send message</button>
+            </div>
           </form>
-        </div>
+        </div> 
       </div>
-    </div>       
+    </div>
     <div class="whatsapp-button">
-      <a href="https://wa.me/393459778518" target="_blank" class="logo-whatsapp">Start a chat with me <img src="./img/CV-img/whatsapp.png" alt="WhatsApp" style="height: 24px; text-decoration: none;"> </a>
+      <a href="https://wa.me/393459778518" target="_blank" class="logo-whatsapp">
+        Start a chat with me <img src="./img/CV-img/whatsapp.png" alt="WhatsApp" style="height: 24px; text-decoration: none;">
+      </a>
     </div>
   </main>
 <footer class="footer">
@@ -76,9 +83,9 @@
   </div>
   <div class="footer-social-icons">
   <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
-    <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"></a>
+    <img src="./img/linkedin-icon-black.png" alt="LinkedIn Profile of Nicola Rossi" class="social-icon"></a>
   <a href="https://github.com/NicolaRo" target="_blank">
-    <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"></a>
+    <img src="./img/Github-Logo-Black.png" alt="GitHub Profile of Nicola Rossi" class="social-icon"></a>
   </div>
     <p>Ethically designed and developed by Rossi Nicola®</p>
 </footer>
