Depyl_Project.html validated CSS Validated & converted in .scss

--- a/Depyl_Project.html
+++ b/Depyl_Project.html
@@ -40,8 +40,8 @@
         <img src="./img/Projects-img/Depyl_Logo_Clear.png" alt="Logo_Depyl" class="hero-img" style="width: 50%; height: auto; margin: 5%;">
         <h3>Water filters</h3>
         <p>🛠️ Build a Web Page that epresents the Brand.
-        👨🏻‍💻 Craft a professional and engaging web page that showcases the essence of a company.</p>
-        <ul>Here are the key elements your page should include to stand out:</ul>
+        👨🏻‍💻 Craft a professional and engaging web page that showcases the essence of a company. Here are the key elements your page should include to stand out:</p>
+        <ul> 
           <li>✍️ Company Name: Highlight the brand clearly and prominently.</li>
           <li>🎨 Company Logo: Create a simple yet eye-catching logo</li>
           <li>🧑‍🧑‍🧒‍🧒 Social Media Links: Add social icons and link them to general platforms (e.g., facebook.com, instagram.com).</li>
@@ -52,10 +52,10 @@
         <a class="go-back-btn" href="./index.html">Back to Home</a>
       </div>
       </div>
-  <div class="DEPYL-Landingpage-scrolling-preview">
-    <img src="./img/Projects-img/DEPYL-Landingpage-scrolling-preview.gif" alt="Preview" class="gif-overlay">
-  </div>
-    
+      <div class="DEPYL-Landingpage-scrolling-preview">
+        <img src="./img/Projects-img/DEPYL-Landingpage-scrolling-preview.gif" alt="Preview" class="gif-overlay">
+      </div>
+    </div>
   </main>
   <footer class="footer">
     <div class="footer-links">
