--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/index-style.css" />
   </head>
 
   <body>
