--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./CSS/index-style.css" />
   </head>
 
-  <body>
+  <body class="index">
     <header class="header">
       <img
         src="./img/Logo_Black-White.png"
