--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/Contact-Me-Style.css">
+    <link rel="stylesheet" href="./scss/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
   (function(){
