--- a/Depyl_Project.html
+++ b/Depyl_Project.html
@@ -15,9 +15,9 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/Projects-Style.css">
+    <link rel="stylesheet" href="./scss/style.css">
 </head>
-<body>  
+<body class="Depyl_Project">
   <header class="header">
     <img src="./img/Logo_Black-White.png" alt="Logo" class="logo-img" style="width: 50px; height: auto; margin-top: 10px;">
     <a href="index.html" class="logo">
