--- a/Green-Earth_Project.html
+++ b/Green-Earth_Project.html
@@ -15,9 +15,9 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
-    <link rel="stylesheet" href="./CSS/Projects-Style.css">
+    <link rel="stylesheet" href="./scss/style.css">
   </head>
-  <body>
+  <body class="Green-Earth_Project">
     <header class="header">
       <img
         src="./img/Logo_Black-White.png"
