--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./scss/pages/CV-Style.css">
+    <link rel="stylesheet" href="./scss/style.css">
 </head>
 <body class="CV">
   <header class="header">
