--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="wrap-button-container">
-      <div class="go-to-button">
+      <div class="CV-go-to-button">
         <a href="CV.html" target="_blank" class="logo-button"
           >My Developer portfolio
           <img
@@ -96,7 +96,7 @@
             style="width: 110px; height: auto"
         /></a>
       </div>
-      <div class="go-to-button">
+      <div class="contact-go-to-button">
         <a href="Contact-Me.html" target="_blank" class="logo-button"
           >Contact Me
           <img
