--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
-    <link rel="stylesheet" href="./scss/style.css" />
+    <link rel="stylesheet" href="/CSS/index-style.css" />
   </head>
 
   <body class="index">
@@ -64,13 +64,9 @@
           </p>
           <p>
             After I
-            <em style="font-weight: bold"
-              >graduated in Digital Graphic Design in 2024</em
-            >, I decided to complete my education in the digital environment
-            with another
-            <em style="font-weight: bold"
-              >Master degree in Full Stack development</em
-            >👨🏻💻.
+            <em style="font-weight: bold">graduated in Digital Graphic Design in 2024</em>, 
+            I decided to complete my education in the digital environment with another
+            <em style="font-weight: bold"> Master degree in Full Stack development</em>👨🏻💻.
           </p>
           <p>
             I practice board sports 🛹 🏄🏻♂️ 🏂 to energize, I travel the world
@@ -90,7 +86,7 @@
       <div class="CV-go-to-button">
         <a href="CV.html" target="_blank" class="logo-button"
           >My Developer portfolio
-          <img
+          <img 
             src="./img/Dev-logo.png"
             alt="Developer-illustration"
             style="width: 110px; height: auto"
