Mi primer commit

--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="stylesheet" href="./CSS/CV-Style.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="CV">
   <header class="header">
@@ -47,9 +47,9 @@
 <section class="CV-hero-master">
   
   <div class="start2Impact-container">
-    <h1 class="institute-title">Institute: <strong>"Start 2 Impact"</strong></h1>
+    <h1 class="institute-title">Institute: <b>"Start 2 Impact"</b></h1>
+    <img src="./img/CV-img/Logo_Start2Impact.png" alt="Logo_Start2Impact" class="hero-logo">
   </div>
-  <img src="./img/CV-img/Logo_Start2Impact.png" alt="Logo_Start2Impact" class="hero-logo">
   <div class="University-logo">
     <div class="macbook-wrapper-container">
       <div class="macbook-wrapper">
@@ -117,9 +117,9 @@
   </div>
 </section> 
 <section class="my-projects">
-  <div class="Section-title">
+  <div class="section-title">
     <h1>My Projects</h1>
-    <img src="./img/CV-img/Coding-Software-Engineer_GIF.gif" alt="Coding Software Engineer" class="projects-img;">
+    <img src="./img/CV-img/Coding-Software-Engineer_GIF.gif" alt="Coding Software Engineer" class="coding-guy">
   </div>
   <div class="card-container">
     <div class="card">
