--- a/Depyl_Project.html
+++ b/Depyl_Project.html
@@ -1,75 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv= "X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="DEPYL Project">
-    <meta property="og:description" content="Project showcase">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://nicolaro.github.io/Depyl_Project.html">
-    <meta property="og:image" content="https://github.com/NicolaRo/NicolaRo.github.io/raw/main/img/Projects-img/Depyl_Logo_Clear.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="DEPYL Project" />
+    <meta property="og:description" content="Project showcase" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://nicolaro.github.io/Depyl_Project.html" />
+    <meta property="og:image" content="https://github.com/NicolaRo/NicolaRo.github.io/raw/main/img/Projects-img/Depyl_Logo_Clear.png" />
     <title>Nicola Rossi Full-Stack Developer</title>
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-      </style>
-    <link rel="stylesheet" href="./scss/style.css">
-</head>
-<body class="Depyl_Project">
-  <header class="header">
-    <img src="./img/Logo_Black-White.png" alt="Logo" class="logo-img" style="width: 50px; height: auto; margin-top: 10px;">
-    <a href="index.html" class="logo">
-    </a>
-    <input class="menu-btn" id="menu-btn" type="checkbox">
-    <label for="menu-btn" class="menu-icon">
-     <span class="nav-icon"></span>
-    </label>
-    <ul class="menu">
-     <li> <a href=index.html>I'm Nicola</a></li>
-     <li> <a href=CV.html>My Developer CV</a></li> 
-     <li> <a href=Contact-Me.html> Contact Me</a></li>
-    </ul>
-  </header>
-  <main>
-    <div class="DEPYL-wrapper">
-      <div class="CV-hero-master">
-      <div class="Project-description">
-        <h1>💧 DEPYL PROJECT 💧</h1>
-        <img src="./img/Projects-img/Depyl_Logo_Clear.png" alt="Logo_Depyl" class="hero-img" style="width: 50%; height: auto; margin: 5%;">
-        <h3>Water filters</h3>
-        <p>🛠️ Build a Web Page that epresents the Brand.
-        👨🏻‍💻 Craft a professional and engaging web page that showcases the essence of a company. Here are the key elements your page should include to stand out:</p>
-        <ul> 
-          <li>✍️ Company Name: Highlight the brand clearly and prominently.</li>
-          <li>🎨 Company Logo: Create a simple yet eye-catching logo</li>
-          <li>🧑‍🧑‍🧒‍🧒 Social Media Links: Add social icons and link them to general platforms (e.g., facebook.com, instagram.com).</li>
-          <li>🎯 Mission Statement: Write a concise, impactful sentence that captures the company’s mission and vision.</li>
-          <li>🧩 Background Aligned with Brand Values: Choose a background that visually reflects the company's identity and values</li>
-        </ul>
-        <a class="next-project-btn" href="./Green-Earth_Project.html">Next project</a>
-        <a class="go-back-btn" href="./index.html">Back to Home</a>
+    </style>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body class="Depyl_Project">
+    <header class="header">
+      <img src="./img/Logo_Black-White.png" alt="Logo" class="logo-img" style="width: 50px; height: auto; margin-top: 10px" />
+      <a href="index.html" class="logo"> </a>
+      <input class="menu-btn" id="menu-btn" type="checkbox" />
+      <label for="menu-btn" class="menu-icon">
+        <span class="nav-icon"></span>
+      </label>
+      <ul class="menu">
+        <li><a href="index.html">I'm Nicola</a></li>
+        <li><a href="CV.html">My Developer CV</a></li>
+        <li><a href="Contact-Me.html"> Contact Me</a></li>
+      </ul>
+    </header>
+    <main>
+      <div class="DEPYL-wrapper">
+        <div class="CV-hero-master">
+          <div class="Project-description">
+            <h1>💧 DEPYL PROJECT 💧</h1>
+            <img src="./img/Projects-img/Depyl_Logo_Clear.png" alt="Logo_Depyl" class="hero-img" style="width: 50%; height: auto; margin: 5%" />
+            <h3>Water filters</h3>
+            <p>
+              🛠️ Build a Web Page that epresents the Brand. 👨🏻‍💻 Craft a professional and engaging web page that showcases the essence of a company. Here are the
+              key elements your page should include to stand out:
+            </p>
+            <ul>
+              <li>✍️ Company Name: Highlight the brand clearly and prominently.</li>
+              <li>🎨 Company Logo: Create a simple yet eye-catching logo</li>
+              <li>🧑‍🧑‍🧒‍🧒 Social Media Links: Add social icons and link them to general platforms (e.g., facebook.com, instagram.com).</li>
+              <li>🎯 Mission Statement: Write a concise, impactful sentence that captures the company’s mission and vision.</li>
+              <li>🧩 Background Aligned with Brand Values: Choose a background that visually reflects the company's identity and values</li>
+            </ul>
+            <a class="next-project-btn" href="./Green-Earth_Project.html">Next project</a>
+            <a class="go-back-btn" href="./index.html">Back to Home</a>
+          </div>
+        </div>
+        <div class="DEPYL-Landingpage-scrolling-preview">
+          <img src="./img/Projects-img/DEPYL-Landingpage-scrolling-preview.gif" alt="Preview" class="gif-overlay" />
+        </div>
       </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-links">
+        <a class="footer-btn" href="./index.html">Home</a>
+        <a class="footer-btn" href="./CV.html">CV</a>
+        <a class="footer-btn" href="./Contact-Me.html">Contact Me</a>
       </div>
-      <div class="DEPYL-Landingpage-scrolling-preview">
-        <img src="./img/Projects-img/DEPYL-Landingpage-scrolling-preview.gif" alt="Preview" class="gif-overlay">
+      <div class="footer-social-icons">
+        <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
+          <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"
+        /></a>
+        <a href="https://github.com/NicolaRo" target="_blank"> <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon" /></a>
       </div>
-    </div>
-  </main>
-  <footer class="footer">
-    <div class="footer-links">
-      <a class="footer-btn"  href="./index.html">Home</a>
-      <a class="footer-btn"  href="./CV.html">CV</a>
-      <a class="footer-btn"  href="./Contact-Me.html">Contact Me</a>
-    </div>
-    <div class="footer-social-icons">
-    <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
-      <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"></a>
-    <a href="https://github.com/NicolaRo" target="_blank">
-      <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon"></a>
-    </div>
       <p>Ethically designed and developed by Rossi Nicola®</p>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
