--- a/index.html
+++ b/index.html
@@ -12,26 +12,18 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nicolaro.github.io/" />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Foto.png"
-    />
+    <meta property="og:image" content="https://raw.githubusercontent.com/NicolaRo/NicolaRo.github.io/main/img/Foto.png" />
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-    <link rel="stylesheet" href="/CSS/index-style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body class="index">
     <header class="header">
-      <img
-        src="./img/Logo_Black-White.png"
-        alt="Logo"
-        class="logo-img"
-        style="width: 50px; height: auto; margin-top: 10px"
-      />
+      <img src="./img/Logo_Black-White.png" alt="Logo" class="logo-img" style="width: 50px; height: auto; margin-top: 10px" />
       <a href="index.html" class="logo"></a>
       <input class="menu-btn" id="menu-btn" type="checkbox" />
       <label for="menu-btn" class="menu-icon">
@@ -51,11 +43,7 @@
       <div class="title-container">
         <h1>Hi I'm Nicola</h1>
         <div class="portrait">
-          <img
-            src="./img/Foto-Portfolio02_2024.png"
-            alt="Nicola portrait"
-            class="hero-img"
-          />
+          <img src="./img/Foto-Portfolio02_2024.png" alt="Nicola portrait" class="hero-img" />
         </div>
         <div class="bio-text">
           <p>
@@ -64,20 +52,17 @@
           </p>
           <p>
             After I
-            <em style="font-weight: bold">graduated in Digital Graphic Design in 2024</em>, 
-            I decided to complete my education in the digital environment with another
-            <em style="font-weight: bold"> Master degree in Full Stack development</em>👨🏻💻.
+            <em style="font-weight: bold">graduated in Digital Graphic Design in 2024</em>, I decided to complete my education in the digital environment with
+            another <em style="font-weight: bold"> Master degree in Full Stack development</em>👨🏻💻.
           </p>
           <p>
-            I practice board sports 🛹 🏄🏻♂️ 🏂 to energize, I travel the world
-            for inspiration 🗺️ and I bring along
+            I practice board sports 🛹 🏄🏻♂️ 🏂 to energize, I travel the world for inspiration 🗺️ and I bring along
             <em style="font-weight: bold">creativity</em> and
             <em style="font-weight: bold">professional attitude.</em>
           </p>
           <p>
             Get a glance of what I'm up to or
-            <em style="font-weight: bold">reach me out</em> to discover my
-            incredible story 📝
+            <em style="font-weight: bold">reach me out</em> to discover my incredible story 📝
           </p>
         </div>
       </div>
@@ -85,21 +70,13 @@
     <div class="wrap-button-container">
       <div class="CV-go-to-button">
         <a href="CV.html" target="_blank" class="logo-button"
-          >My Developer portfolio
-          <img 
-            src="./img/Dev-logo.png"
-            alt="Developer-illustration"
-            style="width: 110px; height: auto"
+          >My Developer portfolio <img src="./img/Dev-logo.png" alt="Developer-illustration" style="width: 110px; height: auto"
         /></a>
       </div>
       <div class="contact-go-to-button">
         <a href="Contact-Me.html" target="_blank" class="logo-button"
           >Contact Me
-          <img
-            src="./img/contact-form-logo.png"
-            alt="Contact-form-illustration"
-            style="width: 110px; height: auto"
-          />
+          <img src="./img/contact-form-logo.png" alt="Contact-form-illustration" style="width: 110px; height: auto" />
         </a>
       </div>
     </div>
@@ -110,21 +87,10 @@
         <a class="footer-btn" href="./Contact-Me.html">Contact Me</a>
       </div>
       <div class="footer-social-icons">
-        <a
-          href="https://www.linkedin.com/in/nicola-rossi-3365a768/"
-          target="_blank"
-        >
-          <img
-            src="./img/linkedin-icon-black.png"
-            alt="LinkedIn Logo Black"
-            class="social-icon"
+        <a href="https://www.linkedin.com/in/nicola-rossi-3365a768/" target="_blank">
+          <img src="./img/linkedin-icon-black.png" alt="LinkedIn Logo Black" class="social-icon"
         /></a>
-        <a href="https://github.com/NicolaRo" target="_blank">
-          <img
-            src="./img/Github-Logo-Black.png"
-            alt="Github Logo Black"
-            class="social-icon"
-        /></a>
+        <a href="https://github.com/NicolaRo" target="_blank"> <img src="./img/Github-Logo-Black.png" alt="Github Logo Black" class="social-icon" /></a>
       </div>
       <p>Ethically designed and developed by Rossi Nicola®</p>
     </footer>
