edited bio text - test branch

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             another <em style="font-weight: bold"> Master degree in Full Stack development</em>👨🏻💻.
           </p>
           <p>
-            I practice board sports 🛹 🏄🏻♂️ 🏂 to energize, I travel the world for inspiration 🗺️ and I bring along
+            I practice board sports 🛹 🏂 to energize, I travel the world for inspiration 🗺️ and I bring along
             <em style="font-weight: bold">creativity</em> and
             <em style="font-weight: bold">professional attitude.</em>
           </p>
