--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Nicola Rossi Full-Stack Developer</title>
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png" />
     <style>
-      @import url('@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');');
+      @import url('@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:wght@0,200..900;1,200..900&display=swap');');
     </style>
     <link rel="stylesheet" href="css/style.css" />
   </head>
